# stlink

./: .appveyor.yml  .cproject  .gitignore  .project  .travis-lin-mingw.sh  .travis.sh  .travis.yml  10-stlink.rules  49-stlinkv1.rules  49-stlinkv2-1.rules  49-stlinkv2.rules  49-stm32l-discovery.rules  ACKNOWLEDGMENTS  AUTHORS  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  ChangeLog  ChangeLog.md  INSTALL  INSTALL.mingw  LICENSE.md  Makefile  Makefile.am  README  README.md  SECURITY.md  TODO  TODO.md  applying conditional operator.cpp  autogen.sh  c0.patch  cmake_uninstall.cmake.in  configure.ac  contributors.txt  generate_binaries.sh  mingw64-build.bat  raspberrypi-build.sh  (+3 more)
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report--only-valid-if-template-is-reused--.md  bug-report.md  bug_report.md  feature-request.md  feature_request.md  support_question.md
.github/workflows/: c-cpp.yml  codeql-analysis.yml  codeql-buildscript.sh  main.yml
VS2017/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  st-flash.vcxproj  st-flash.vcxproj.filters  st-info.vcxproj  st-info.vcxproj.filters  stlink-shared.vcxproj  stlink-shared.vcxproj.filters  stlink-static.vcxproj  stlink.sln  unistd.h
cmake/: CFlags.cmake  CPackConfig.cmake  Version.cmake  c_flag_overrides.cmake  c_flags.cmake  cpack_config.cmake  linux-mingw32.cmake  linux-mingw64.cmake  version.cmake
cmake/modules/: Find7Zip.cmake  Find7zip.cmake  FindLibUSB.cmake  Find_7zip.cmake  Find_libusb.cmake  Findlibusb.cmake  c_flags.cmake  cpack_config.cmake  get_version.cmake  pandocology.cmake  set_toolchain.cmake
cmake/packaging/: CMakeLists.txt  cpack_config.cmake
cmake/pkgconfig/: pkgconfig.pc.cmake
config/: code_style.cfg
config/chips/: C011xx.chip  C031xx.chip  F03x.chip  F04x.chip  F05x.chip  F07x.chip  F09X.chip  F09x.chip  F0xx small.chip  F0xx.chip  F0xx_small.chip  F1 Connectivity line.chip  F1 Low-density device.chip  F1 XL-density.chip  F1 medium-density.chip  F1_Low_density_device.chip  F1_XL-density.chip  F1_connectivity_line.chip  F1_high-density.chip  F1_low-density.chip  F1_medium-density.chip  F1_value_line.chip  F1_value_line_high-density.chip  F1xx High-density value line.chip  F1xx High-density.chip  F1xx Medium-density.chip  F1xx Value Line.chip  F1xx XL-density.chip  F1xx_CL.chip  F1xx_HD.chip  F1xx_High_density.chip  F1xx_High_density_value_line.chip  F1xx_LD.chip  F1xx_MD.chip  F1xx_Medium_density.chip  F1xx_VL_HD.chip  F1xx_VL_MD_LD.chip  F1xx_Value_Line.chip  F1xx_XLD.chip  F1xx_XL_density.chip  (+121 more)
config/modprobe.d/: stlink_v1.conf
debian/: .gitignore  changelog  control  copyright  gbp.conf  libstlink-dev.install  libstlink.install  libstlink1.install  libstlink1.symbols  rules  stlink-gui.dirs  stlink-gui.install  stlink-lib.symbols  stlink-tools.dirs  stlink-tools.install  stlink-tools.manpages  stlink.pc.in  watch
debian/patches/: cross.patch  guipath.patch  series
debian/pkg-config/: CMakeLists.txt  pkg-config.pc.cmake
debian/source/: options
debian/upstream/: metadata
doc/: build_mingw.md  compiling.md  developer.txt  devices_boards.md  flashloaders.md  release.md  supported devices.md  supported_devices.md  tested-boards.md  tutorial.md  version_support.md  wiki_old.md
doc/app-example/: CMakeLists.txt  README.md  main.c
doc/dev/: developer.txt
doc/dev/pkg-config/: CMakeLists.txt
doc/man/: CMakeLists.txt  Makefile  st-flash.1  st-flash.md  st-info.1  st-info.md  st-term.1  st-term.md  st-util.1  st-util.md
doc/tutorial/: tutorial.tex
example/: Makefile  README  build.sh  main.c
example/32l_dac/: Makefile  main.c  startup_stm32l1xx_md.s
example/32l_lcd/: Makefile  discover_board.h  stm32l_discovery_lcd.c  stm32l_discovery_lcd.h
example/32vl_factory_demo/: Makefile  README  main.c  stm32f10x_conf.h  stm32f10x_it.c  stm32f10x_it.h  system_stm32f10x.c
example/blink/: .cproject  .project  Makefile  blink.elf  disasm.sh  main.c
example/blink_flash/: Makefile  blink.elf  (+3 more)
flash/: Makefile  crap.txt  main.c
flashloaders/: Makefile  cleanroom.md  linker.ld  stm32f0.s  stm32f4.s  stm32f4lv.s  stm32f7.s  stm32f7lv.s  stm32l0x.s  stm32l4.s  stm32lx.s
gdbserver/: Makefile  gdb-remote.c  gdb-server.c
gui/: Makefile.am  stlink-gui.c  stlink-gui.h
inc/: CMakeLists.txt  backend.h  stlink.h  stm32.h  stm32flash.h  version.h.in
include/: CMakeLists.txt  stlink.h  stm32.h
include/stlink/: backend.h  chipid.h  commands.h  flash_loader.h  logging.h  reg.h  sg.h  stlinkusb.h  usb.h
include/stlink/tools/: flash.h
mingw/: mingw.c  mingw.h
nbproject/: Package-Default.bash  Package-flash.bash  Package-gdbserver.bash  Package-library_cli.bash  configurations.xml  project.xml
scripts/: appveyor-mingw.sh  mingw64-build.bat  run_clang_analyze.sh
src/: calculate.c  calculate.h  chipid.c  common.c  common.h  common_flash.c  common_flash.h  flash_loader.c  flashloader.c  gdb-remote.c  gdb-remote.h  gdb-server.c  libusb_settings.h  logging.c  logging.h  map_file.c  map_file.h  md5.c  md5.h  mmap.c  mmap.h  option.c  option_bytes.c  pread.c  read_write.c  reg.h  sg.c  sg.h  st-info.c  st-probe.c  st-term.c  stlink-access-test.c  stlink-common.c  stlink-common.h  stlink-hex.c  stlink-hex.h  stlink-hw.c  stlink-hw.h  stlink-sg.c  stlink-sg.h  (+9 more)
src/gdbserver/: CMakeLists.txt  Makefile  gdb-remote.c  gdb-server.c  semihosting.c  semihosting.h
src/stlink-gui/: CMakeLists.txt  gui.c  gui.h  stlink-gui.desktop  stlink-gui.ui
src/stlink-gui/icons/: export-icons.sh  stlink-gui.xpm
src/tools/gui/: CMakeLists.txt  Makefile.am  stlink-gui.c  stlink-gui.h  stlink-gui.ui  stlink.desktop
src/tools/gui/art/: export-icons.sh
stlinkv1_macos_driver/: Makefile  README.md  install.sh
stlinkv1_macosx_driver/: Makefile  README  README.md
stm32l_notes/: USB_traces.ods  device_connection.csv  go.csv
tests/: CMakeLists.txt  flash.c  sg.c  stlink_usb.c  usb.c
usr/lib/pkgconfig/: CMakeLists.txt  pkg-config.pc.cmake
(+364 files in other folders)
